--- a/src/content/adhd/site-settings.yaml
+++ b/src/content/adhd/site-settings.yaml
@@ -1,24 +1,24 @@
 site:
   name: Together ADHD
   email: info@togetheradhd.co.uk
-  ico_registration: '00010615323'
+  ico_registration: "00010615323"
   waitlist_only: false
 logo:
-  light: ~/assets/images/adhd/logo-light.svg
-  dark: ~/assets/images/adhd/logo-dark.svg
+  light: ~/assets/images/adhd/together-adhd-logo.png
+  dark: ~/assets/images/adhd/together-adhd-logo.png
   alt: Together ADHD Logo
 footer:
   title: Together ADHD
   business_info: Sole trader, trading as Together ADHD. North Lincolnshire and
     surrounding areas.
-
 seo:
-  title_default: "Together ADHD Assessments"
+  title_default: Together ADHD Assessments
   title_template: "%s — Together ADHD Assessments"
-  description: "ADHD assessments for adults in the UK. Professional neurodiversity assessment services for North Lincolnshire and surrounding areas."
+  description: ADHD assessments for adults in the UK. Professional neurodiversity
+    assessment services for North Lincolnshire and surrounding areas.
   robots_index: false
   robots_follow: true
-  area_served: "North Lincolnshire"
+  area_served: North Lincolnshire
   social:
     linkedin: ""
     twitter: ""
@@ -30,10 +30,9 @@ seo:
     location:
       street_address: ""
       address_locality: ""
-      address_region: "North Lincolnshire"
+      address_region: North Lincolnshire
       postal_code: ""
       latitude: null
       longitude: null
-
 analytics:
   ga4_id: ""
