--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "astro": "astro",
     "precommit": "npm run fix && npm run check:astro",
     "check": "npm run check:astro && npm run check:eslint && npm run check:prettier",
-    "check:astro": "cross-env WEBSITE_ID=assessments astro check",
+    "check:astro": "cross-env ASSESSMENTS_URL=http://localhost:4321 ADHD_URL=http://localhost:4321 AUTISM_URL=http://localhost:4321 WEBSITE_ID=assessments astro check",
     "check:eslint": "eslint .",
     "check:prettier": "prettier --check .",
     "fix": "npm run fix:eslint && npm run fix:prettier",
