--- a/src/content/assessments/home-page/content.yaml
+++ b/src/content/assessments/home-page/content.yaml
@@ -29,7 +29,8 @@ sections:
   blog: Latest from the blog
   blog_subtitle: Lorem Ipsum
   faqs: Frequently Asked Questions
-  trust_badges_heading: Professional accreditations and memberships
+  trust_badges_heading: Established and led by neurodivergent healthcare
+    professionals with a decade of NHS experience
   more_faqs_button_text: More FAQs
 steps:
   - title: Step 1
