feat(content/assessments): Update Home Page "content"

--- a/src/content/assessments/home-page/content.yaml
+++ b/src/content/assessments/home-page/content.yaml
@@ -27,7 +27,7 @@ sections:
   how_it_works: How it works
   services: Services
   blog: Latest from the blog
-  blog_subtitle: Lorem Ipsum
+  blog_subtitle: " "
   faqs: Frequently Asked Questions
   trust_badges_heading: Established and led by neurodivergent healthcare
     professionals with a decade of NHS experience
