--- a/src/content/assessments/home-page/content.yaml
+++ b/src/content/assessments/home-page/content.yaml
@@ -36,13 +36,21 @@ steps:
   - title: Step 1
     text: Free 15‑min consultation → understand needs.
     icon: tabler:message-2-question
+    joined_to_previous: false
   - title: Step 2
     text: Assessment → structured sessions & validated tools.
     icon: tabler:clipboard-check
+    joined_to_previous: true
   - title: Step 3
     text: Formulation with clear recommendations → Gaining an understanding with
       practical, tailored next steps (work, study, life).
     icon: tabler:bulb
+    joined_to_previous: true
+  - joined_to_previous: false
+    title: Support Sessions at any time
+    text: One to one support sessions → Schedule additional bespoke support sessions
+      at any time
+    icon: tabler:message-2-code
 seo_settings:
   metaTitle: Together Assessments - Custom SEO Title Test
   metaDescription: This is a custom meta description for Phase B testing. It
