feat(content/autism): Update FAQs Page "top_content"

--- a/src/content/autism/faqs-page/top-content.yaml
+++ b/src/content/autism/faqs-page/top-content.yaml
@@ -2,56 +2,4 @@ title: FAQs
 subheading: ""
 image: ~/assets/images/autism/pexels-leeloothefirst-5428836_easy-resize.com.jpg
 image_alt: "Question marks made from paper cut outs "
-body: >-
-  **Can you prescribe medication?**
-
-
-  No. I am not a prescriber. If medication is indicated, I can guide you on discussing this with your GP.
-
-
-  **Can I use Right to Choose?**
-
-
-  Not at this time. This service is independent and not yet part of NHS Right to Choose.
-
-
-  **Can you provide a diagnosis?**
-
-
-  No. Together Assessments provides specialist assessments, formulations, and recommendations only. If you require a formal diagnosis, please [join the waitlist](https://forms.gle/PbSduh2fVq3bbuKE8) and find more information at [Together ADHD](https://togetheradhd.co.uk) or [Together Autism](https://togetherautism.co.uk).
-
-
-  **Do you record appointments?**
-
-
-  Yes — with your consent. Video recording ensures scoring accuracy and reliability. If you are not comfortable with this, I may not be the right provider.
-
-
-  **Can I be accompanied?**
-
-
-  Yes. You are welcome to have a supporter present at any time. 
-
-
-  **Do you make reasonable adjustments?**
-
-
-  Yes, adjustments are standard. You can request specific changes or choose from a suggested menu.
-
-
-  **Who is eligible?**
-
-
-  Services are for adults aged 18+. Autism assessments require that your home is psychologically safe, private, and has a table and two chairs available. 
-
-
-  **Where are you based?**
-
-
-  I am based in North Lincolnshire and offer home assessments in [the surrounding areas](https://maps.app.goo.gl/Xthspzi56XfmwEi88). Many assessments can be offered online if preferred. I should be able to advise you if I am able to complete your assessment fully online or if a home assessment may be needed in your free consultation. 
-
-
-  **Can you help me if I don't like labels?**
-
-
-  Yes, I am delighted to be able to offer in depth assessments without labels.
+body: ""
