feat(content/autism): Update Services Page "top_content"

--- a/src/content/autism/services-page/top-content.yaml
+++ b/src/content/autism/services-page/top-content.yaml
@@ -2,7 +2,7 @@ title: Services
 subheading: ""
 image: ""
 body: Together Assessments exists to provide approachable, specialist
-  assessments, and support for adults exploring their own neurodivergence.
+  assessments, and support for adults exploring their own neurodevelopment.
 catalogue_info:
   name: ""
   description: ""
