feat(content/autism): Update FAQs Page "top_content"

--- a/src/content/autism/faqs-page/top-content.yaml
+++ b/src/content/autism/faqs-page/top-content.yaml
@@ -1,5 +1,5 @@
 title: FAQs
 subheading: ""
-image: ~/assets/images/autism/pexels-leeloothefirst-5428836_easy-resize.com.jpg
-image_alt: "Question marks made from paper cut outs "
+image: ""
+image_alt: ""
 body: ""
