feat(content/autism): Update Home Page "content"

--- a/src/content/autism/home-page/content.yaml
+++ b/src/content/autism/home-page/content.yaml
@@ -28,7 +28,7 @@ sections:
   blog: Latest from the blog
   blog_subtitle: " "
   faqs: Frequently Asked Questions
-  trust_badges_heading: Professional accreditations and memberships
+  trust_badges_heading: " "
   more_faqs_button_text: More FAQs
 steps:
   - title: Step 1
