feat(content/autism): Update Waitlist Page "content"

--- a/src/content/autism/waitlist-page/content.yaml
+++ b/src/content/autism/waitlist-page/content.yaml
@@ -1,5 +1,13 @@
 title: Join the Waitlist
-subheading: ''
-image: ''
-body: ''
+subheading: ""
+image: ""
+body: >-
+  Seeking a diagnostic assessment? \
+
+  The services I currently offer **do not** include formal diagnoses or prescriptions. Services which do include formal diagnosis, if appropriate, but not prescriptions are [currently wait-listed with an anticipated wait time of 3 or more months; the costs of these may vary during that time. However, I will always do my best to be as reasonably priced as possible.](https://forms.gle/PbSduh2fVq3bbuKE8)
+
+
+  Autism Assessment (this assessment requires at least one home visit) - £1100 \
+
+  ADHD Assessment (my service cannot offer prescriptions or medication following a diagnosis at this time) - £500 Combined Autism and ADHD assessment (as above) - £1300
 google_form_link: https://docs.google.com/forms/d/e/1FAIpQLSexample/viewform
