feat(content/assessments): Update Services Page "top_content"

--- a/src/content/assessments/services-page/top-content.yaml
+++ b/src/content/assessments/services-page/top-content.yaml
@@ -1,7 +1,8 @@
 title: Services
 subheading: ""
 image: ""
-body: Some content
+body: Together Assessments exists to provide approachable, specialist
+  assessments, and support for adults exploring their own neurodevelopment.
 catalogue_info:
   name: ADHD and Autism Assessment Services
   description: Comprehensive diagnostic assessments for adults by qualified
