feat(content/autism): Update Contact Page "content"

--- a/src/content/autism/contact-page/content.yaml
+++ b/src/content/autism/contact-page/content.yaml
@@ -2,4 +2,4 @@ title: Contact Us
 subheading: Get in touch
 body: I'm here to help answer any questions you may have about our assessment
   services. [Please feel free to reach out to Adriana (she/they) on
-  info@togetherassessments.co.uk .](info@togetherassessments.co.uk)
+  info@togetherAutism.co.uk .](info@togetherautism.co.uk)
