feat(content/assessments): Update Contact Page "content"

--- a/src/content/assessments/contact-page/content.yaml
+++ b/src/content/assessments/contact-page/content.yaml
@@ -1,5 +1,7 @@
 title: Contact Us
 subheading: Get in touch
+image: ~/assets/images/assessments/pexels-vie-studio-4439416.jpg
+image_alt: Hello written on a note attached to flowers
 body: I'm here to help answer any questions you may have about our assessment
   services. [Please feel free to reach out to Adriana (she/they) on
   info@togetherassessments.co.uk .](<>)
