feat(content/assessments): Update Services Page "top_content"

--- a/src/content/assessments/services-page/top-content.yaml
+++ b/src/content/assessments/services-page/top-content.yaml
@@ -1,6 +1,8 @@
 title: Services
 subheading: ""
-image: ""
+image: ~/assets/images/assessments/chatgpt-image-nov-6-2025-11_54_45-pm.png
+image_alt: Set out as a menu are 4 symbols; a brain, a repeating loop, a
+  clipboard with tick, and a heart with hands
 body: Together Assessments exists to provide approachable, specialist
   assessments, and support for adults exploring their own neurodevelopment.
 catalogue_info:
