feat(content/assessments): Update FAQs Page "top_content"

--- a/src/content/assessments/faqs-page/top-content.yaml
+++ b/src/content/assessments/faqs-page/top-content.yaml
@@ -1,4 +1,5 @@
 title: Frequently Asked Questions
 subheading: ""
-image: ""
+image: ~/assets/images/assessments/pexels-leeloothefirst-5428829-1-.jpg
+image_alt: Question marks in papercraft
 body: ""
